Video texture not refreshing when changing ImageUser Start Frame / Offset #95624

Closed
opened 2022-02-09 00:49:37 +01:00 by Bo Maryniuk · 9 comments

System Information
Operating system: 12.1 Monterey
Graphics card: AMD Radeon RX Vega 56 8 GB

Blender Version
Broken: latest-greatest 3.1
Worked: 3.0.x

Caused by 28df0107d4.
There was #94464 (Blender Video texture not refreshing) and the fix for it resolved the timeline refresh, but Start Frame / Offset are still broken.

Note there is also related #92980 (Video textures not updating in Cycles renders when using persistent data).

Short description of error

Offset does not work if video is loaded in "Images as Planes". If I click incrementally on offset to sync other videos in shading tab, I cannot see any changes that video object actually changes. This worked so far perfectly.

Exact steps for others to reproduce the error

  • Enable Images as Planes add-ons
  • {nav Shift + A > Images > Image as planes}
  • Add any video
  • Switch to Shading workspace
  • Change offset value
    In 3.1 this is broken to unusable state, so I have to use 3.0 for a while.
**System Information** Operating system: 12.1 Monterey Graphics card: AMD Radeon RX Vega 56 8 GB **Blender Version** Broken: latest-greatest 3.1 Worked: 3.0.x Caused by 28df0107d4. There was #94464 (Blender Video texture not refreshing) and the fix for it resolved the timeline refresh, but `Start Frame` / `Offset` are still broken. Note there is also related #92980 (Video textures not updating in Cycles renders when using persistent data). **Short description of error** Offset does not work if video is loaded in "Images as Planes". If I click incrementally on offset to sync other videos in shading tab, I cannot see any changes that video object actually changes. This worked so far perfectly. **Exact steps for others to reproduce the error** - Enable `Images as Planes` add-ons - {nav Shift + A > Images > Image as planes} - Add any video - Switch to Shading workspace - Change offset value In 3.1 this is broken to unusable state, so I have to use 3.0 for a while.
Author

Added subscriber: @isbm

Added subscriber: @isbm
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This does not seem to be about the Addon specifically, seems like the offset is generally broken, will check.

This does not seem to be about the Addon specifically, seems like the offset is generally broken, will check.
Member

Added subscribers: @JacquesLucke, @brecht

Added subscribers: @JacquesLucke, @brecht
Member

Caused by 28df0107d4.
There was #94464 (Blender Video texture not refreshing) and the fix for it resolved the timeline refresh, but Start Frame / Offset are still broken.

Note there is also related #92980 (Video textures not updating in Cycles renders when using persistent data).

CC @JacquesLucke
CC @brecht

Caused by 28df0107d4. There was #94464 (Blender Video texture not refreshing) and the fix for it resolved the timeline refresh, but `Start Frame` / `Offset` are still broken. Note there is also related #92980 (Video textures not updating in Cycles renders when using persistent data). CC @JacquesLucke CC @brecht
Philipp Oeser changed title from Broken video frames offset in "Images as Planes" add-on to Video texture not refreshing when changing ImageUser `Start Frame` / `Offset` 2022-02-10 10:42:36 +01:00

This issue was referenced by 720d653b41

This issue was referenced by 720d653b418bb5760c5891a2c8b74b72ea9889a9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-02-10 17:31:53 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95624
No description provided.